--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -11,10 +11,16 @@
 }
 
 .columnTemplate {
-  grid-template-columns:
-    minmax(50px, 0.25fr) minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(60px, 0.5fr)
-    minmax(170px, 1fr);
-  grid-template-areas: 'nonce type info date confirmations actions status';
+  grid-template-columns: minmax(50px, 0.25fr) minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(
+      170px,
+      1fr
+    );
+  grid-template-areas: 'nonce type info date confirmations actions';
+}
+
+.columnTemplate.grouped {
+  grid-template-columns: minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(170px, 1fr);
+  grid-template-areas: 'type info date confirmations actions';
 }
 
 .columnTemplateTxHistory {
@@ -22,36 +28,22 @@
   grid-template-areas: 'nonce type info date status';
 }
 
-.columnWrap {
-  white-space: normal;
-}
-
-@media (max-width: 599.95px) {
-  .columnWrap {
-    word-break: break-word;
-  }
-
+@media (max-width: 1200px) {
   .gridContainer {
     gap: var(--space-1);
   }
 
+  .columnTemplateTxHistory,
   .columnTemplate {
-    grid-template-columns: repeat(12, auto);
-    grid-template-areas:
-      'nonce type type type type type type type type type type type'
-      'empty info info info info info info info info info info info'
-      'empty date date date date date date date date date date date'
-      'empty confirmations confirmations confirmations confirmations confirmations confirmations confirmations confirmations confirmations confirmations confirmations'
-      'empty status status status status status status status status status status status'
-      'empty actions actions actions actions actions actions actions actions actions actions actions';
+    display: flex;
+    flex-wrap: wrap;
   }
 
-  .columnTemplateTxHistory {
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-areas:
-      'nonce type type type type type type type type type type type'
-      'empty info info info info info info info info info info info'
-      'empty date date date date date date date date date date date'
-      'empty status status status status status status status status status status status';
+  .nonce {
+    min-width: 30px;
+  }
+
+  .date {
+    width: 100%;
   }
 }
