Add pending state to the Execute button

--- a/src/components/common/TokenAmount/styles.module.css
+++ b/src/components/common/TokenAmount/styles.module.css
@@ -5,6 +5,10 @@
   color: var(--color-text-primary);
 }
 
+.container b {
+  font-weight: bold;
+}
+
 .verticalAlign {
   vertical-align: middle;
 }
