--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -4,37 +4,37 @@
   gap: var(--space-2);
   align-items: center;
   white-space: nowrap;
-}
-
-.untrusted {
-  opacity: 0.4;
-}
-
-.columnTemplate {
-  grid-template-columns: minmax(50px, 0.25fr) minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(
-      170px,
-      1fr
-    );
-  grid-template-areas: 'nonce type info date confirmations actions';
-}
-
-.columnTemplate.grouped {
-  grid-template-columns: minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(170px, 1fr);
-  grid-template-areas: 'type info date confirmations actions';
-}
-
-.columnTemplateTxHistory {
   grid-template-columns: minmax(50px, 0.25fr) minmax(150px, 3fr) minmax(150px, 3fr) 0.75fr 0.5fr;
-  grid-template-areas: 'nonce type info date status';
+  grid-template-areas: 'nonce type info date confirmations status';
+
+}
+
+.container.queued {
+  grid-template-columns: minmax(50px, 0.25fr) minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(
+    250px,
+    1fr
+  );
+}
+
+.container.grouped {
+  grid-template-columns: minmax(150px, 3fr) minmax(150px, 3fr) 0.75fr 0.5fr;
+  grid-template-areas: 'type info date confirmations status';
+}
+
+.container.queued.grouped {
+  grid-template-columns: minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(
+    250px,
+    1fr
+  );
+}
+
+.container.untrusted {
+  opacity: 0.4;
 }
 
 @media (max-width: 1200px) {
   .gridContainer {
     gap: var(--space-1);
-  }
-
-  .columnTemplateTxHistory,
-  .columnTemplate {
     display: flex;
     flex-wrap: wrap;
   }
