--- a/src/components/transactions/GroupedTxListItems/styles.module.css
+++ b/src/components/transactions/GroupedTxListItems/styles.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: var(--space-2);
+  border: 1px solid var(--color-warning-light);
   display: grid;
   align-items: center;
   grid-template-columns: minmax(50px, 0.25fr) minmax(150px, 2fr) minmax(150px, 2fr) minmax(200px, 2fr) 1fr minmax(
