--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -1,20 +1,38 @@
 .gridContainer {
+  --grid-nonce: minmax(50px, 0.25fr);
+  --grid-type: minmax(150px, 3fr);
+  --grid-info: minmax(150px, 3fr);
+  --grid-date: minmax(200px, 3fr);
+  --grid-confirmations: minmax(150px, 1fr);
+  --grid-status: minmax(120px, 1fr);
+
   width: 100%;
   display: grid;
   gap: var(--space-2);
   align-items: center;
   white-space: nowrap;
-  grid-template-columns: minmax(50px, 0.25fr) minmax(150px, 3fr) minmax(150px, 3fr) minmax(200px, 3fr) auto;
+  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations) var(
+      --grid-status
+    );
+  grid-template-areas: 'nonce type info date confirmations status';
+}
+
+.gridContainer.history {
+  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-status);
   grid-template-areas: 'nonce type info date status';
 }
 
 .gridContainer.grouped {
-  grid-template-columns: minmax(150px, 3fr) minmax(150px, 3fr) minmax(200px, 3fr) auto;
-  grid-template-areas: 'type info date status';
+  grid-template-columns: var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations) var(--grid-status);
+  grid-template-areas: 'type info date confirmations status';
 }
 
 .gridContainer.untrusted {
   opacity: 0.4;
+}
+
+.date {
+  color: var(--color-text-secondary);
 }
 
 @media (max-width: 1200px) {
