--- a/src/components/common/ChainIndicator/styles.module.css
+++ b/src/components/common/ChainIndicator/styles.module.css
@@ -2,13 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 70px;
+  /* min-width: 70px; */
   font-size: 12px;
 }
 
 .inlineIndicator {
   display: inline-block;
-  min-width: 70px;
+  /* min-width: 70px; */
   font-size: 11px;
   line-height: normal;
   text-align: center;
@@ -23,3 +23,8 @@
   padding: 0;
   font-size: 14px;
 }
+
+.withName {
+  min-width: 70px;
+}
+
