--- a/src/components/sidebar/SafeListItem/styles.module.css
+++ b/src/components/sidebar/SafeListItem/styles.module.css
@@ -12,7 +12,7 @@
 .safe {
   border-radius: 8px;
   border: 1px solid var(--color-border-light);
-  height: 72px;
+  padding-right: 40px;
 }
 
 .open {
@@ -34,8 +34,24 @@
   right: 74px;
 }
 
+.listItemText {
+  padding-right: 0;
+  flex: none;
+  justify-content: flex-start
+}
+
+.listItemInfo {
+  display:flex;
+  flex-direction:row;
+  margin-right: auto;
+}
+
 @media (max-width: 400px) {
   .withPendingButtons :global .MuiListItemSecondaryAction-root {
     right: 48px;
+  }
+
+  .listItemInfo {
+    display:block
   }
 }
