--- a/src/components/safe-apps/SafeAppsSDKLink/styles.module.css
+++ b/src/components/safe-apps/SafeAppsSDKLink/styles.module.css
@@ -51,11 +51,15 @@
   left: 50%;
   bottom: -20px;
   margin-left: -25px;
-  background-color: #12ff80;
+  background-color: var(--color-secondary-main);
 }
 
-.openButton:hover {
-  background-color: #1ec46c;
+[data-theme='dark'] .openButton {
+  background-color: var(--color-secondary-light);
+}
+
+[data-theme='dark'] .openButton:hover {
+  background-color: var(--color-primary-dark);
 }
 
 .openButton svg {
