--- a/src/components/common/SafeList/styles.module.css
+++ b/src/components/common/SafeList/styles.module.css
@@ -1,7 +1,18 @@
+.container {
+  max-width: 695px;
+  margin: auto;
+  padding: var(--space-5) 0;
+
+}
+
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: var(--space-3) var(--space-3) var(--space-2);
-    border-bottom: 1px solid var(--color-border-light);
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: var(--space-2);
+}
+
+.sidebarHeader {
+  border-bottom: 1px solid var(--color-border-light);
+}
+
