--- a/src/components/sidebar/SafeListItem/styles.module.css
+++ b/src/components/sidebar/SafeListItem/styles.module.css
@@ -1,7 +1,7 @@
 .container {
   margin-top: var(--space-1);
   margin-bottom: var(--space-1);
-  padding-left: var(--space-2);
+  padding-left: var(--space-3);
 }
 
 /* <Track> */
@@ -12,7 +12,7 @@
 .safe {
   border-radius: 8px;
   border: 1px solid var(--color-border-light);
-  padding-right: 40px;
+  padding-right: var(--space-5);
 }
 
 .open {
