--- a/src/components/welcome/Login/styles.module.css
+++ b/src/components/welcome/Login/styles.module.css
@@ -1,25 +1,7 @@
-.ownedLabelWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .ownedLabel {
-    cursor: pointer;
-    color: var(--color-primary-light);
-    margin-top: var(--space-1);
-    margin-bottom: var(--space-1);
-  }
-  
-  .list {
-    overflow-x: hidden;
-    overflow-y: hidden;
-    padding: 0 0;
-  }
-  
-  @media (max-width: 599.95px) {
-    .list {
-      overflow-x: auto;
-    }
-  }
-  
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--space-3) var(--space-3) var(--space-2);
+  border-bottom: 1px solid var(--color-border-light);
+}
