--- a/src/components/sidebar/SafeListItem/styles.module.css
+++ b/src/components/sidebar/SafeListItem/styles.module.css
@@ -1,30 +1,22 @@
-.listContaner {
+.container {
   border-radius: 8px;
   border: 1px solid var(--color-border-light);
   margin-left: var(--space-3);
   margin-top: var(--space-1);
   margin-bottom: var(--space-1);
   margin-right: var(--space-2);
-
-
-
 }
 
-.container {
-  /* margin-top: var(--space-1); */
-  /* margin-bottom: var(--space-1); */
-  /* padding-left: var(--space-3); */
+.container:hover {
+  background-color: var(--color-secondary-background);
 }
-
 
 /* <Track> */
-.container > span {
+.listItem > span {
   flex: 1;
 }
 
 .safe {
-  /* border-radius: 8px;
-  border: 1px solid var(--color-border-light); */
   padding-right: var(--space-6);
 }
 
@@ -35,17 +27,17 @@
   background-color: var(--color-secondary-background) !important;
 }
 
-.safe:hover {
-  background-color: var(--color-secondary-background);
+.listItem :global .MuiListItemButton-root:hover {
+  background-color: transparent;
 }
 
-.container :global .MuiListItemSecondaryAction-root {
+.listItem :global .MuiListItemSecondaryAction-root {
   right: 12px;
 }
 
-/* .withPendingButtons :global .MuiListItemSecondaryAction-root {
-  right: 74px;
-} */
+.listItem :global .Mui-selected {
+  background-color: red;
+}
 
 .listItemText {
   padding-right: 0;
