--- a/src/components/common/SafeList/styles.module.css
+++ b/src/components/common/SafeList/styles.module.css
@@ -2,7 +2,6 @@
   max-width: 695px;
   margin: auto;
   padding: var(--space-5) 0;
-
 }
 
 .header {
@@ -14,5 +13,19 @@
 
 .sidebarHeader {
   border-bottom: 1px solid var(--color-border-light);
+  padding: 16px 26px;
+  margin: 0;
+  /* padding: 0 24px; */
+  /* font-size: 20px; */
 }
 
+.sidebarTitle {
+  font-size: 20px;
+}
+
+
+@media (max-width: 400px) {
+  /* .header {
+    font-size: 20px;
+  } */
+}
