--- a/src/components/welcome/SafeListDrawer/styles.module.css
+++ b/src/components/welcome/SafeListDrawer/styles.module.css
@@ -9,18 +9,13 @@
   gap: var(--space-1);
 }
 
-.fileIcon {
-  display: flex;
-  align-items: center;
-  padding: var(--space-1);
-  background-color: var(--color-background-main);
-}
-
 .card {
+  margin: auto;
   padding: var(--space-3);
   gap: var(--space-2);
   display: flex;
   flex-direction: column;
+  background-color: transparent;
 }
 
 .card :global .MuiCardHeader-root,
@@ -29,5 +24,13 @@
 }
 
 .cardHeader {
-  text-align: left;
+  text-align: center;
+}
+
+.infoIcon {
+  vertical-align: middle;
+  width: 1rem;
+  height: 1rem;
+  margin: 4px;
+  color: var(--color-primary-light);
 }
