--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -6,3 +6,14 @@
   padding-top: var(--space-2);
   padding-bottom: var(--space-2);
 }
+
+.listItem> :first-child {
+  display: block;
+  flex: 1;
+}
+
+.safeLink {
+  display: flex;
+  gap: var(--space-2);
+  align-items: center;
+}
