--- a/src/components/dashboard/FirstSteps/styles.module.css
+++ b/src/components/dashboard/FirstSteps/styles.module.css
@@ -29,3 +29,11 @@
   margin-bottom: auto;
   color: var(--color-border-light);
 }
+
+.gradient {
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+}
