--- a/src/components/sidebar/Sidebar/styles.module.css
+++ b/src/components/sidebar/Sidebar/styles.module.css
@@ -46,7 +46,7 @@
 .drawerButton {
   position: absolute !important;
   z-index: 2;
-  color: white;
+  color: var(--color-text-primary);
   padding: 8px 0;
   right: 0;
   transform: translateX(50%);
