--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -3,8 +3,8 @@
 }
 
 .safeList {
-  padding: 24px;
-  margin-bottom: 24px;
+  padding: var(--space-3);
+  margin-bottom: var(--space-3);
 }
 
 .header {
