--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -37,7 +37,7 @@
 }
 
 .open {
-  padding-left: 16px;
+  padding-left: var(--space-2);
   border: 1px solid var(--color-secondary-light);
   border-left: 6px solid var(--color-secondary-light);
   background-color: var(--color-secondary-background) !important;
