use container queries to apply styles to sidebar

--- a/src/components/common/ChainIndicator/styles.module.css
+++ b/src/components/common/ChainIndicator/styles.module.css
@@ -26,14 +26,17 @@
   justify-content: start;
 }
 
-.withoutName {
-  min-width: 0;
-}
 @media (max-width: 899.95px) {
-  .responsive .name {
-    display: none;
-  }
   .indicator {
     min-width: 35px;
+  }
+}
+
+@container my-accounts-container (max-width: 500px) {
+  .responsive {
+    min-width: 0;
+  }
+  .name {
+    display: none;
   }
 }
