--- a/src/components/dashboard/FirstSteps/styles.module.css
+++ b/src/components/dashboard/FirstSteps/styles.module.css
@@ -58,3 +58,11 @@
 .checkIcon.completed {
   color: var(--color-success-main);
 }
+
+.orDivider {
+  display: inline-block;
+  padding: 0 var(--space-3);
+  background: var(--color-background-paper);
+  bottom: -11px;
+  position: relative;
+}
