--- a/src/features/counterfactual/styles.module.css
+++ b/src/features/counterfactual/styles.module.css
@@ -39,6 +39,28 @@
   background: var(--color-border-background);
 }
 
+.newTxButton {
+  justify-content: flex-start;
+  text-align: left;
+  padding: var(--space-2);
+  border-radius: 6px;
+  border: 1px solid var(--color-border-light);
+  width: 100%;
+  color: var(--color-text-primary);
+  gap: var(--space-2);
+}
+
+.newTxButton:hover {
+  border-color: var(--color-primary-main);
+}
+
+.iconBg {
+  background: var(--color-background-main);
+  display: inline-flex;
+  border-radius: 50%;
+  padding: var(--space-1);
+}
+
 @media (max-width: 400px) {
   .radioGroup {
     flex-direction: column;
