create PaginatedSafeList component for watchlist and owned safes

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -1,14 +1,14 @@
 .container {
   container-type: inline-size;
   container-name: my-accounts-container;
-  display:flex;
-  justify-content:center; 
+  display: flex;
+  justify-content: center;
 }
 
 .myAccounts {
   width: 100%;
   max-width: 600px;
-  margin: var(--space-2)
+  margin: var(--space-2);
 }
 
 .safeList {
@@ -55,13 +55,13 @@
   padding-left: var(--space-2);
 }
 
-.watchlistHeader {
-  padding-bottom:  var(--space-1);
+.listHeader {
+  padding-bottom: var(--space-1);
   display: flex;
   justify-content: space-between;
 }
 
-.watchlistTitle {
+.listTitle {
   margin: auto 0;
 }
 
