--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -69,7 +69,12 @@
 
   .header {
     padding: var(--space-3);
+  }
+
+  .safeList {
+    border-top: 1px solid var(--color-border-light);
     border-bottom: 1px solid var(--color-border-light);
+    border-radius: 0;
   }
 
   .title {
