--- a/src/components/welcome/SafeListDrawer/styles.module.css
+++ b/src/components/welcome/SafeListDrawer/styles.module.css
@@ -12,7 +12,6 @@
 .card {
   margin: auto;
   padding: var(--space-3);
-  gap: var(--space-2);
   display: flex;
   flex-direction: column;
   background-color: transparent;
@@ -32,5 +31,5 @@
   width: 1rem;
   height: 1rem;
   margin: 4px;
-  color: var(--color-primary-light);
+  color: var(--color-text-secondary);
 }
