--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -111,15 +111,18 @@
 
   .header {
     padding: var(--space-3);
+    border-bottom: 1px solid var(--color-border-light);
   }
 
   .safeList {
-    border-top: 1px solid var(--color-border-light);
-    border-bottom: 1px solid var(--color-border-light);
     border-radius: 0;
   }
 
   .title {
     font-size: 20px;
+  }
+
+  .card {
+    border-top: 1px solid var(--color-border-light);
   }
 }
