Feat: redesign Safe List in sidebar (#3245)
* Refactor: do not update added Safes balances (#3243)

* Display simplified safelist in the sidebar (#3248)

* Fix styles on import/export widget in the safe list (#3263)

* redesign data widget

* adjust margins

* add separator and fix padding

* move data widget to MyAccounts and remove SafeListDrawer

* remove unecessary padding

* remove unused styles

* do not wait for safes list on welcome page in cypress tests

* Separate watchlist from owned safes  (#3258)

* display new safe list in sidebar

* align chain indicators in the sidebar

* add styles for currently open safe in the sidebar

close drawer after choosing a safe in the sidebar

* remove duplicate definition of isSidebar

* fix: css formatting

* Update src/components/welcome/MyAccounts/styles.module.css

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/AccountItem.tsx

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/AccountItem.tsx

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/index.tsx

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/styles.module.css

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/styles.module.css

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/styles.module.css

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/styles.module.css

Co-authored-by: katspaugh <381895+katspaugh@users.noreply.github.com>

* Update src/components/welcome/MyAccounts/styles.module.css

Co-authored-by: katspaugh <381895+katspaugh@users.nore

--- a/src/components/common/ChainIndicator/styles.module.css
+++ b/src/components/common/ChainIndicator/styles.module.css
@@ -27,10 +27,16 @@
 }
 
 @media (max-width: 899.95px) {
+  .indicator {
+    min-width: 35px;
+  }
+}
+
+@container my-accounts-container (max-width: 500px) {
+  .responsive {
+    min-width: 0;
+  }
   .responsive .name {
     display: none;
   }
-.indicator {
-  min-width: 35px;
-}
 }
