--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -32,12 +32,12 @@
   border: 1px solid var(--color-border-light);
   border-radius: var(--space-1);
   margin-bottom: 12px;
-  padding-top: var(--space-2);
-  padding-bottom: var(--space-2);
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
 }
 
 .currentListItem {
-  padding-left: var(--space-2);
   border: 1px solid var(--color-secondary-light);
   border-left-width: 6px;
   background-color: var(--color-secondary-background) !important;
@@ -51,7 +51,7 @@
 .safeLink {
   display: flex;
   align-items: center;
-  padding-right: var(--space-1);
+  padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
 }
 
 .safeAddress {
