--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -100,6 +100,20 @@
   color: var(--color-text-secondary);
 }
 
+.visibilityIcon {
+  font-size: 16px !important;
+  color: var(--color-border-main) !important;
+}
+
+.readOnlyChip {
+  border-radius: 4px;
+  color: var(--color-primary-light);
+  border-color: var(--color-border-light);
+  font-size: 14px;
+  padding-left: var(--space-1);
+  padding-right: var(--space-1);
+}
+
 @media (max-width: 899.95px) {
   .container {
     width: auto;
