Updates for color in Dark Mode: info alert background, selected Safe Account in the drawer. Warning color styles updates

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -26,10 +26,10 @@
   --color-info-main: #5fddff;
   --color-info-light: #b7f0ff;
   --color-info-background: #effcff;
-  --color-warning-dark: #cd674e;
+  --color-warning-dark: #C04C32;
   --color-warning-main: #ff8061;
-  --color-warning-light: #ffb7a6;
-  --color-warning-background: #fff0ed;
+  --color-warning-light: #FFBC9F;
+  --color-warning-background: #FFF1E0;
   --color-background-default: #f4f4f4;
   --color-background-main: #f4f4f4;
   --color-background-paper: #ffffff;
