--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -4,6 +4,8 @@
   --grid-info: minmax(150px, 3fr);
   --grid-date: minmax(200px, 3fr);
   --grid-confirmations: minmax(150px, 1fr);
+
+  --grid-actions: minmax(120px, 1fr);
   --grid-status: minmax(120px, 1fr);
 
   width: 100%;
@@ -11,10 +13,12 @@
   gap: var(--space-2);
   align-items: center;
   white-space: nowrap;
-  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations) var(
+  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
+  var(--grid-actions)
+  var(
       --grid-status
     );
-  grid-template-areas: 'nonce type info date confirmations status';
+  grid-template-areas: 'nonce type info date confirmations  status actions';
 }
 
 .gridContainer > * {
